Fix dark mode links for case studies

--- a/app/css/_work.scss
+++ b/app/css/_work.scss
@@ -86,7 +86,7 @@
   &__button {
     background-color: var(--light-bg-color);
     font-size: .85rem;
-    margin: 0 1rem 1.5rem;
+    margin: 1rem 1rem 1.5rem;
     padding: .5rem .75rem;
     text-decoration: none;
     transition: color, background .25s ease-in-out;
